# aerpaw-files

./: README.md
basestation/Profile/ExperimentScripts/: checkPlan.sh  savePlan.sh
basestation/Profile/PortableNodeTests/: README.txt
basestation/Profile/PortableNodeTests/ConnectDisconnect/: README.txt
basestation/Profile/PortableNodeTests/DataflashLogParser/: Ardupilog.m  LogMsgGroup.m
basestation/Profile/PortableNodeTests/Land/: README.txt  land.py
basestation/Profile/ProfileScripts/: README.md  defaults.sh  startAll.sh  stopVehicle.sh
basestation/Profile/SDR_control/: OFDM-Machine.tar.xz  README.txt
basestation/Profile/checkpoint_system/: checkpoint.py
basestation/Profile/vehicle_control/: README.txt
drone/Profile/: README.txt
drone/Profile/ExperimentScripts/: Readme.md
drone/Profile/PostProcessing/: gps_data_updater.py  log2csv.py
drone/Profile/ProfileScripts/: reset.sh  stopAll.sh  stopRadio.sh  stopTraffic.sh
drone/Profile/SDR_control/CellSearch/srsran-version/: CMakeLists.txt
drone/Profile/checkpoint_system/: README.md  launch_server.sh  server.py
drone/Profile/other_radio/: README.txt
flypaw_basestation/basestation/basestationAgent/: basestationAgent.py  basestationAgent_first.py  flypawClasses.py  screenlog.0
flypaw_basestation/basestation/video/: public_key.pem  screenlog.0  videoModule.py  videoModule_first.py  videoModule_replay.py
flypaw_basestation/cloud/receive_file_udp/: receive_file_udp.py
flypaw_drone/basestation/basestationAgent/: flypawClasses.py
flypaw_drone/drone/flypawPilot/: ActionError.json  dummy.py  dump_watchdog.json  flypawPilot.py  flypawPilot_first.py  json_dump_id.txt  json_dump_q.txt  json_dump_spec.txt  json_dump_t.txt  json_dump_wph.txt  private_key_dsa.pem  sendVideo.py  videoModule.py  videoModule_first.py  videoModule_replay.py
(+321 files in other folders)
